why-k8s/k8s-demo/k8s/deploy-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-demo
      version: v1
  template:
    metadata:
      labels:
        app: k8s-demo
        version: v1
        track: active
    spec:
      containers:
      - name: app
        image: quay-dev.byu.edu/demo/demo-app
        ports:
          - containerPort: 8080
