why-k8s/k8s-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  selector:
    app: demo-app
    track: active
  ports:
  - port: 8080
  - targetPort: 8080
  type: LoadBalancer
