why-k8s/k8s-demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: { name: demo-ingress }
spec:
  rules:
  - host: devspark-demo.byu.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-svc
            port: { number: 80 }
